--- a/templates/includes/business_header.html
+++ b/templates/includes/business_header.html
@@ -3,15 +3,18 @@
 <!-- Business Logo -->
 {% if tenant_settings.business_logo %}
 <div class="business-logo">
-    <img src="{{ tenant_settings.business_logo.url }}" alt="{{ business.name }} Logo" class="logo-img" onerror="this.onerror=null; this.src='{% static 'img/logo.png' %}'">
+    <img src="{{ tenant_settings.business_logo.url }}" alt="{{ business.name }} Logo" class="logo-img" 
+         onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'logo-placeholder\'><i class=\'fas fa-building\'></i><br><small>{{ business.name }}</small></div>'; console.log('Logo failed to load:', this.src);">
 </div>
 {% elif tenant_settings.logo_url %}
 <div class="business-logo">
-    <img src="{{ tenant_settings.logo_url }}" alt="{{ business.name }} Logo" class="logo-img" onerror="this.onerror=null; this.src='{% static 'img/logo.png' %}'">
+    <img src="{{ tenant_settings.logo_url }}" alt="{{ business.name }} Logo" class="logo-img" 
+         onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'logo-placeholder\'><i class=\'fas fa-building\'></i><br><small>{{ business.name }}</small></div>'; console.log('Logo URL failed to load:', this.src);">
 </div>
 {% else %}
 <div class="business-logo">
-    <img src="{% static 'img/logo.png' %}" alt="{{ business.name }} Logo" class="logo-img">
+    <img src="{% static 'img/logo.png' %}" alt="{{ business.name }} Logo" class="logo-img" 
+         onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'logo-placeholder\'><i class=\'fas fa-building\'></i><br><small>{{ business.name }}</small></div>';">
 </div>
 {% endif %}
 
@@ -21,8 +24,10 @@
 <div class="business-details">{{ tenant_settings.tagline }}</div>
 {% endif %}
 
-<!-- Address -->
-{% if tenant_settings.contact_address %}
+<!-- PO Box (prioritized over regular address) -->
+{% if tenant_settings.po_box %}
+<div class="business-details">P.O. BOX {{ tenant_settings.po_box }}</div>
+{% elif tenant_settings.contact_address %}
 <div class="business-details">{{ tenant_settings.contact_address }}</div>
 {% elif business.city %}
 <div class="business-details">{{ business.city }}{% if business.state %}, {{ business.state }}{% endif %}</div>
