--- a/templates/suppliers/categories.html
+++ b/templates/suppliers/categories.html
@@ -59,7 +59,7 @@
                                     <td>{{ category.description|default:"No description"|truncatechars:50 }}</td>
                                     <td>
                                         <span class="badge badge-info">
-                                            {{ category.suppliers.count }} suppliers
+                                            {{ category.active_supplier_count }} suppliers
                                         </span>
                                     </td>
                                     <td>
