--- a/templates/services/invoice_print.html
+++ b/templates/services/invoice_print.html
@@ -248,8 +248,8 @@
             padding: 8px 4px;
             font-weight: bold;
             vertical-align: middle;
-            border-left: none;
-            border-right: none;
+            border-left: 1px solid #000;
+            border-right: 1px solid #000;
             border-top: 1px solid #000;
             border-bottom: 1px solid #000;
             background-color: #e5e5e5;
@@ -358,7 +358,7 @@
         }
         
         .terms-section {
-            font-size: 10px;
+            font-size: 14px;
             line-height: 1.3;
             margin-top: 15px;
             padding: 8px;
@@ -373,7 +373,7 @@
         
         .payment-details {
             margin-top: 10px;
-            font-size: 10px;
+            font-size: 14px;
             line-height: 1.3;
         }
         
@@ -554,9 +554,10 @@
                     <tr {% if item.type == 'customer_part' %}class="customer-part-row"{% endif %}>
                         <td class="item-col">{{ forloop.counter }}</td>
                         <td class="description-col">
-                            {{ item.description|upper }}
                             {% if item.type == 'customer_part' %}
-                            <br><small>(CUSTOMER PROVIDED - NO CHARGE)</small>
+                            {{ item.description|upper }}
+                            {% else %}
+                            {{ item.description|upper }}
                             {% endif %}
                         </td>
                         <td class="qty-col">{{ item.quantity|floatformat:-2 }}</td>
