--- a/templates/services/quick_order.html
+++ b/templates/services/quick_order.html
@@ -2276,7 +2276,7 @@
 {% endblock %}
 
 {% block extra_js %}
-<script src="{% static 'js/quick_order.js' %}"></script>
+<script src="{% static 'js/quick_order.js' %}?v={{ static_version }}"></script>
 
 <style>
 @keyframes slideInRight {
