--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{{ title|default:"Autowash" }}{% endblock %}</title>
     {% load static %}
+    {% load cache_tags %}
     {% load subscription_tags %}
     
     <!-- PWA Meta Tags -->
@@ -20,14 +21,14 @@
     <link rel="manifest" href="{% url 'core:manifest' %}">
     
     <!-- Favicon and Icons -->
-    <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}?v={{ static_version }}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/icons/icon-192x192.png' %}?v={{ static_version }}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/icons/icon-192x192.png' %}?v={{ static_version }}">
+    <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}?v={% cache_buster %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/icons/icon-192x192.png' %}?v={% cache_buster %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/icons/icon-192x192.png' %}?v={% cache_buster %}">
     
     <!-- Apple Touch Icons -->
-    <link rel="apple-touch-icon" href="{% static 'img/icons/apple-touch-icon.png' %}?v={{ static_version }}">
-    <link rel="apple-touch-icon" sizes="152x152" href="{% static 'img/icons/icon-152x152.png' %}?v={{ static_version }}">
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/icons/apple-touch-icon.png' %}?v={{ static_version }}">
+    <link rel="apple-touch-icon" href="{% static 'img/icons/apple-touch-icon.png' %}?v={% cache_buster %}">
+    <link rel="apple-touch-icon" sizes="152x152" href="{% static 'img/icons/icon-152x152.png' %}?v={% cache_buster %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/icons/apple-touch-icon.png' %}?v={% cache_buster %}">
     
     <!-- Apple PWA Meta Tags -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -36,8 +37,8 @@
     
     <!-- Microsoft Tiles -->
     <meta name="msapplication-TileColor" content="#2563eb">
-    <meta name="msapplication-TileImage" content="{% static 'img/icons/icon-144x144.png' %}?v={{ static_version }}">
-    <meta name="msapplication-config" content="{% static 'browserconfig.xml' %}?v={{ static_version }}">
+    <meta name="msapplication-TileImage" content="{% static 'img/icons/icon-144x144.png' %}?v={% cache_buster %}">
+    <meta name="msapplication-config" content="{% static 'browserconfig.xml' %}?v={% cache_buster %}">
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -52,11 +53,11 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
     <!-- Main CSS -->
-    <link href="{% static 'css/main.css' %}?v={{ static_version }}" rel="stylesheet">
-    <link href="{% static 'css/sidebar.css' %}?v={{ static_version }}" rel="stylesheet">
-    <link href="{% static 'css/auth.css' %}?v={{ static_version }}" rel="stylesheet">
-    <link href="{% static 'css/components.css' %}?v={{ static_version }}" rel="stylesheet">
-    <link href="{% static 'css/pwa.css' %}?v={{ static_version }}" rel="stylesheet">
+    <link href="{% static 'css/main.css' %}?v={% cache_buster %}" rel="stylesheet">
+    <link href="{% static 'css/sidebar.css' %}?v={% cache_buster %}" rel="stylesheet">
+    <link href="{% static 'css/auth.css' %}?v={% cache_buster %}" rel="stylesheet">
+    <link href="{% static 'css/components.css' %}?v={% cache_buster %}" rel="stylesheet">
+    <link href="{% static 'css/pwa.css' %}?v={% cache_buster %}" rel="stylesheet">
     
     <style>
     /* Subscription expired layout adjustments */
@@ -197,16 +198,16 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     
     <!-- Main JavaScript -->
-    <script src="{% static 'js/main.js' %}?v={{ static_version }}"></script>
+    <script src="{% static 'js/main.js' %}?v={% cache_buster %}"></script>
     
     <!-- Components JavaScript -->
-    <script src="{% static 'js/components.js' %}?v={{ static_version }}"></script>
+    <script src="{% static 'js/components.js' %}?v={% cache_buster %}"></script>
     
     <!-- Topbar JavaScript -->
-    <script src="{% static 'js/topbar.js' %}?v={{ static_version }}"></script>
+    <script src="{% static 'js/topbar.js' %}?v={% cache_buster %}"></script>
     
     <!-- PWA JavaScript -->
-    <script src="{% static 'js/pwa.js' %}?v={{ static_version }}"></script>
+    <script src="{% static 'js/pwa.js' %}?v={% cache_buster %}"></script>
     
     <!-- Initialize AOS -->
     <script>
